@@ -1,5 +1,9 @@
 2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* GeoCoordinate.wrl: 
+
+2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* GeoCoordinate.wrl:
 	* OrthoViewpoint.wrl: 
 
